# owl-project

./: .gitignore  README.md
actix-server/: .gitignore  Cargo.toml
actix-server/.cargo/: config.toml
actix-server/generate-db/: Cargo.toml
actix-server/generate-db/src/dev_db/: dev_init.rs
actix-server/migrations/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-db-seed.sql
actix-server/src/: main.rs  middleware.rs
actix-server/src/services/: auth.rs  mod.rs
client/: Cargo.toml  Trunk.toml  index.html
client/src/: app.rs  lib.rs  main.rs
client/src/assets/: arrows.rs  mod.rs  owl_logo.rs
client/src/components/: main_view.rs  menu_button.rs  mod.rs  side_button.rs  title_bar.rs
client/src/components/alerts/: danger.rs  info.rs  mod.rs  success.rs  warning.rs
client/src/layouts/: app_route.rs  main_layout.rs  mod.rs
client/src/views/: forgotpass_view.rs  home_view.rs  login_view.rs  mod.rs  notfound_view.rs  register_view.rs
client/style/: output.css
server/: Cargo.toml  rustfmt.toml
server/.cargo/: config.toml
server/_src/: error.rs  main.rs
server/crates/libs/lib-auth/: Cargo.toml
server/crates/libs/lib-auth/src/: config.rs
server/crates/libs/lib-auth/src/pwd/: error.rs  mod.rs
server/crates/libs/lib-auth/src/pwd/scheme/: error.rs  mod.rs  scheme_01.rs  scheme_02.rs
server/crates/libs/lib-auth/src/token/: error.rs  mod.rs
server/crates/libs/lib-core/: Cargo.toml
server/crates/libs/lib-core/src/: config.rs  lib.rs
server/crates/libs/lib-core/src/model/: error.rs  mod.rs
server/crates/libs/lib-core/src/model/store/: error.rs  mod.rs
server/crates/libs/lib-rpc/: Cargo.toml
server/crates/libs/lib-utils/: Cargo.toml
server/crates/libs/lib-utils/src/: b64.rs  config.rs  encrypt.rs  envs.rs  lib.rs  time.rs
server/crates/services/web-server/: Cargo.toml
server/crates/services/web-server/src/: config.rs  error.rs  main.rs
server/crates/services/web-server/src/web/: mod.rs  routes_auth.rs
server/crates/tools/gen-key/: Cargo.toml
server/crates/tools/gen-key/src/: main.rs
server/crates/tools/gen-pass/: Cargo.toml
server/crates/tools/gen-pass/src/: main.rs
server/migrations/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-db-seed.sql
server/web-folder/: index.html
