[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = "0.8.2"
sycamore-router = "0.8.0"
wasm-bindgen = "0.2.90"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.20"
