[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { version = "0.8.2", features = ["suspense"] }
sycamore-router = "0.8.0"
wasm-bindgen = "0.2.90"
wasm-bindgen-futures = "0.4.40"
serde-wasm-bindgen = "0.6.3"
serde_json = "1.0.113"
futures = "0.3.30"
web-sys = "0.3.67"
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.20"
reqwest = { version = "0.11.24", features = ["blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
