[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev.

[workspace]
resolver = "2"
members = [
  #---- Application Libraries
  "crates/libs/lib-utils", # e.g., base64, time, etc.
  "crates/libs/lib-rpc", # e.g., rpc routing,
  "crates/libs/lib-core", # e.g., model, ctx, config.
  "crates/libs/lib-auth", # e.g., for password, token etc.

  #---- Application Service
  "crates/services/web-server",

  #---- Tools
  "crates/tools/gen-key", # e.g., keys generator.
  "crates/tools/gen-pass", #e.g., password generator 
]

# NOTE: Only the crate that are utilized in two or more sub-crates and benefit from global management
#       are handled in workspace.dependencies. Other strategies may also be valid.
[workspace.dependencies]
# ---- Serde
serde_with = { version = "3.6.0", features = ["time_0_3"] }
# ---- Data
derive_more = { version = "0.99.17", features = ["from", "display"] }
#---- Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
