[package]
name = "lib-core"
version = "0.0.0"
edition = "2021"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
#---- Application Libraries
lib-utils = { path = "../../libs/lib-utils" }
lib-auth = { path = "../../libs/lib-auth" }
#---- Async
tokio = { version = "1.35.1", features = ["full"] }
#---- JSON
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { workspace = true }
#---- Database
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres", "uuid", "time"] }
sea-query = "0.30.7"
sea-query-binder = { version = "0.5.0", features = ["sqlx-postgres", "with-uuid", "with-time"] }
modql = { workspace = true }
#---- Tracing
tracing = "0.1.40"
#---- Others
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
time = { version = "0.3.32", features = ["formatting", "parsing", "serde"]}
